# mfatfm

./: README.md  file-manager-next.py  file_manager_window.py  pyproject.toml
src/mfatfm/: __init__.py  connection.py  fileops.py  ui.py
